<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutActivity">

    <android.support.v7.widget.Toolbar
            android:layout_width="@dimen/match_constraint"
            android:layout_height="@dimen/default_tool_bar_height"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/ToolBarStyle"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/about_toolbar" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:title="About" app:layout_constraintHorizontal_bias="0.0"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="@dimen/match_constraint"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/default_side_margin"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/default_side_margin"
            android:layout_marginBottom="@dimen/default_margin_bottom"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="@dimen/default_margin_top"
            app:layout_constraintTop_toBottomOf="@+id/about_toolbar" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0">
        <TextView
                android:text="@string/about_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/about_text_title" android:fontFamily="casual"
                android:textSize="@dimen/about_title_text_size" android:textAlignment="center" android:layout_weight="2"/>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/about_image_height" app:srcCompat="@drawable/you_made_it_im_impressed"
                android:id="@+id/about_image_you_made_it" android:layout_weight="10" android:contentDescription="@string/default_content_description_image"/>
        <TextView
                android:text="@string/about_text_about_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/about_text_info_text" android:fontFamily="casual"
                android:textSize="@dimen/about_info_text_size" android:textAlignment="center" android:layout_weight="3"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/about_button" android:layout_weight="1"
                android:textAlignment="center" android:background="@android:drawable/button_onoff_indicator_on"
                android:clickable="true" android:onClick="displayToast" android:focusable="true"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>